Time: 8 ms (5.54%), Space: 45 MB (7.52%) - LeetHub